Task 2: Upgrade Java project to Java 21 along with Spring Boot, JUnit.